--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Color Realism --><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -689,87 +689,87 @@
             <button class="portfolio-tab active" onclick="showCategory('all')">All Work</button>
             <button class="portfolio-tab" onclick="showCategory('color-realism')">Color Realism</button>
             <button class="portfolio-tab" onclick="showCategory('black-grey')">Black & Grey</button>
-            <button class="portfolio-tab" onclick="showCategory('cartoon')">Cartoon & Pop</button>
+            <button class="portfolio-tab" onclick="showCategory('cartoon')">Pop Culture</button>
         </div>
         
         <div class="portfolio-grid" id="portfolio-container">
-            <!-- Color Realism -->
+            <!-- Color Realism Tattoos -->
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0068.JPG" alt="Fire Snake Color Realism Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0068.JPG" alt="Colorful Snake Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Fire Snake</h4>
+                        <h4>Serpent Design</h4>
                         <p>Color Realism</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0134.JPG" alt="Dragon Fire Chest Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0134.JPG" alt="Dragon Chest Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Dragon Fire</h4>
+                        <h4>Dragon Design</h4>
                         <p>Chest Piece</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0961.jpg" alt="Rose Skull Color Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0961.jpg" alt="Skull and Roses Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Rose & Skull</h4>
-                        <p>Arm Sleeve</p>
+                        <h4>Skull & Roses</h4>
+                        <p>Color Traditional</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2884.jpg" alt="Day of Dead Girl Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2884.jpg" alt="Day of the Dead Girl">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Day of the Dead</h4>
-                        <p>Cultural Portrait</p>
+                        <h4>Día de los Muertos</h4>
+                        <p>Portrait Tattoo</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2903.jpg" alt="Flash Superhero Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2903.jpg" alt="The Flash Superhero Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>The Flash</h4>
-                        <p>Comic Book Style</p>
+                        <p>Superhero Style</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_6086.JPG" alt="Pop Culture Mashup Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_6086.JPG" alt="Pop Culture Mashup">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Pop Culture</h4>
-                        <p>Complex Composition</p>
+                        <h4>Pop Culture Mix</h4>
+                        <p>Character Collage</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_7948.JPG" alt="Graffiti Portrait Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_7948.JPG" alt="Street Art Style Portrait">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Street Art Portrait</h4>
-                        <p>Urban Style</p>
+                        <p>Graffiti Style</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_8386.JPG" alt="Dragon Leg Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_8386.JPG" alt="Asian Dragon Leg Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Dragon Warrior</h4>
-                        <p>Leg Piece</p>
+                        <h4>Asian Dragon</h4>
+                        <p>Leg Sleeve</p>
                     </div>
                 </div>
             </div>
@@ -779,69 +779,69 @@
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Ocean Octopus</h4>
-                        <p>Vibrant Colors</p>
+                        <p>Marine Life</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Black & Grey -->
+            <!-- Black & Grey Tattoos -->
             <div class="portfolio-item" data-category="black-grey">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07517.JPG" alt="Lion Portrait Black and Grey Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07517.JPG" alt="Realistic Lion Portrait">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Lion Portrait</h4>
-                        <p>Photorealistic Detail</p>
+                        <p>Black & Grey Realism</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="black-grey">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07531.JPG" alt="Astronaut Black and Grey Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07531.JPG" alt="Astronaut Space Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Space Explorer</h4>
-                        <p>Detailed Realism</p>
+                        <p>Astronaut Design</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="black-grey">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08079.JPG" alt="Armor Knight Black and Grey Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08079.JPG" alt="Medieval Knight Armor">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Medieval Armor</h4>
-                        <p>Intricate Details</p>
+                        <h4>Knight Armor</h4>
+                        <p>Medieval Theme</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Cartoon/Pop Culture -->
+            <!-- Pop Culture / Cartoon -->
             <div class="portfolio-item" data-category="cartoon">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08208.JPG" alt="Gaming Sleeve Among Us Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08208.JPG" alt="Gaming Characters Sleeve">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Gaming Culture</h4>
-                        <p>Pop Art Style</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="cartoon">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08670.JPG" alt="Nintendo Gaming Leg Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Retro Gaming</h4>
-                        <p>Nostalgic Art</p>
+                        <h4>Gaming Sleeve</h4>
+                        <p>Video Game Characters</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="cartoon">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08709.jpg" alt="Movie Characters Gremlins Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08670.JPG" alt="Nintendo Gaming Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Movie Icons</h4>
-                        <p>Character Art</p>
+                        <h4>Nintendo Classics</h4>
+                        <p>Retro Gaming</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="cartoon">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08709.jpg" alt="Movie Characters Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Movie Characters</h4>
+                        <p>Film Culture</p>
                     </div>
                 </div>
             </div>
@@ -853,24 +853,36 @@
         <h2 class="section-title">Large-Scale Murals</h2>
         <div class="murals-grid">
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Chef Woman Building Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Portrait Mural">
                 <div class="mural-overlay">
-                    <h4>Commercial Portrait</h4>
-                    <p>Photorealistic building-sized mural combining portraiture with product integration. Hyperrealistic details on massive scale.</p>
+                    <h4>Portrait Mural</h4>
+                    <p>Large-scale photorealistic portrait work demonstrating mastery of detail and proportion.</p>
                 </div>
             </div>
 
             <div class="mural-item">
                 <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08734.jpg" alt="Dynamic Figure Mural">
                 <div class="mural-overlay">
-                    <h4>Urban Energy</h4>
-                    <p>Large-scale dynamic figure with vibrant colors and movement. Street art meets fine art on architectural scale.</p>
+                    <h4>Dynamic Figure</h4>
+                    <p>Expressive character work showcasing movement and energy in large format.</p>
                 </div>
             </div>
 
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08717.jpg" alt="Street Art Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08717.jpg" alt="Urban Street Art">
                 <div class="mural-overlay">
-                    <h4>Social Impact</h4>
-                    <p>Powerful awareness mural combining photorealistic portraiture with meaningful messaging. Art with purpose.</p>
+                    <h4>Street Art</h4>
+                    <p>Urban-style mural blending traditional graffiti techniques with modern aesthetics.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2 class="section-title">Session Options</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <div class="service-icon">🎨</div>
+                <h3>Single Day Session</h3>
+                <p>Complete tattoos up to medium size (10-15cm) including detailed portraits, small-medium traditional pieces, or fine line designs.</p>
