--- a/index.html
+++ b/index.html
@@ -1,4 +1,69 @@
-<!DOCTYPE html>
+<div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0961.jpg" alt="Dragon Color Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Dragon</h4>
+                        <p>Color Realism</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="cartoon">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2884.jpg" alt="Rick and Morty Alien Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Rick & Morty Alien</h4>
+                        <p>Cartoon Style</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2903.jpg" alt="Flash DC Superhero Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>The Flash DC</h4>
+                        <p>Superhero Color</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="cartoon">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_6086.JPG" alt="Marvel Pop Art Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Marvel Pop Art</h4>
+                        <p>Comic Book Style</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="cartoon">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_7948.JPG" alt="Spiderman Color Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Spiderman</h4>
+                        <p>Superhero Color</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_8386.JPG" alt="Santa Muerte Color Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Santa Muerte</h4>
+                        <p>Color Portrait</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_9542.jpg" alt="Graffiti Style Leg Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Graffiti Leg Piece</h4>
+                        <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -695,21 +760,21 @@
         <div class="portfolio-grid" id="portfolio-container">
             <!-- Color Realism Tattoos -->
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0068.JPG" alt="Colorful Snake Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0068.JPG" alt="Skull and Rose Cover Up Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Serpent Design</h4>
+                        <h4>Skull & Rose Cover-Up</h4>
                         <p>Color Realism</p>
                     </div>
                 </div>
             </div>
 
-            <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0134.JPG" alt="Dragon Chest Tattoo">
+            <div class="portfolio-item" data-category="black-grey">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0134.JPG" alt="Spartan Warrior Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Dragon Design</h4>
-                        <p>Chest Piece</p>
+                        <h4>Spartan Warrior</h4>
+                        <p>Black & Grey</p>
                     </div>
                 </div>
             </div>
@@ -853,18 +918,18 @@
         <h2 class="section-title">Large-Scale Murals</h2>
         <div class="murals-grid">
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Portrait Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Body Chief & Magda Gessler Mural">
                 <div class="mural-overlay">
-                    <h4>Portrait Mural</h4>
-                    <p>Large-scale photorealistic portrait work demonstrating mastery of detail and proportion.</p>
+                    <h4>Body Chief Collaboration</h4>
+                    <p>Commercial mural project featuring Magda Gessler, showcasing photorealistic portraiture on architectural scale.</p>
                 </div>
             </div>
 
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08734.jpg" alt="Dynamic Figure Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08734.jpg" alt="Pokonaj Raka Foundation Mural">
                 <div class="mural-overlay">
-                    <h4>Dynamic Figure</h4>
-                    <p>Expressive character work showcasing movement and energy in large format.</p>
+                    <h4>Pokonaj Raka Foundation</h4>
+                    <p>Social impact mural for cancer awareness foundation, combining art with meaningful community message.</p>
                 </div>
             </div>
 
@@ -886,3 +951,4 @@
                 <div class="service-icon">🎨</div>
                 <h3>Single Day Session</h3>
                 <p>Complete tattoos up to medium size (10-15cm) including detailed portraits, small-medium traditional pieces, or fine line designs.</p>
+                
