--- a/index.html
+++ b/index.html
@@ -705,40 +705,10 @@
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0961.jpg" alt="Dragon Color Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Dragon</h4>
-                        <p>Color Realism</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2884.jpg" alt="Money in Fire Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Money in Fire</h4>
-                        <p>Color Close-Up</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2903.jpg" alt="Money in Fire Close Up Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Money in Fire Close-Up</h4>
-                        <p>Color Detail</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="color-realism">
                 <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_6086.JPG" alt="Dragon Color Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Dragon Design</h4>
+                        <h4>Dragon</h4>
                         <p>Color Tattoo</p>
                     </div>
                 </div>
@@ -755,7 +725,7 @@
             </div>
 
             <div class="portfolio-item" data-category="cartoon">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_9542.jpg" alt="Marvel Pop Art Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07517.JPG" alt="Marvel Pop Art Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Marvel Pop Art</h4>
@@ -765,7 +735,7 @@
             </div>
 
             <div class="portfolio-item" data-category="cartoon">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07517.JPG" alt="Spiderman Color Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07531.JPG" alt="Spiderman Color Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>Spiderman</h4>
@@ -775,11 +745,41 @@
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08079.JPG" alt="Flash DC Color Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08079.JPG" alt="Santa Muerte Color Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Santa Muerte</h4>
+                        <p>Color Portrait</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08208.JPG" alt="Flash DC Color Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
                         <h4>The Flash DC</h4>
                         <p>Superhero Color</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08670.JPG" alt="Graffiti Leg Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Graffiti Leg Piece</h4>
+                        <p>Color Street Art</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item" data-category="color-realism">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08709.jpg" alt="Old Money Color Tattoo">
+                <div class="portfolio-overlay">
+                    <div class="portfolio-info">
+                        <h4>Old Money</h4>
+                        <p>Color Tattoo</p>
                     </div>
                 </div>
             </div>
@@ -805,43 +805,23 @@
                 </div>
             </div>
 
+            <!-- Additional Color Tattoos -->
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07531.JPG" alt="Santa Muerte Color Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Dragon Color Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Santa Muerte</h4>
-                        <p>Color Portrait</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Pop Culture -->
-            <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08208.JPG" alt="Graffiti Leg Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Graffiti Leg Piece</h4>
-                        <p>Color Street Art</p>
+                        <h4>Dragon Design</h4>
+                        <p>Color Realism</p>
                     </div>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08670.JPG" alt="Old Money Color Tattoo">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08734.jpg" alt="Money in Fire Tattoo">
                 <div class="portfolio-overlay">
                     <div class="portfolio-info">
-                        <h4>Old Money</h4>
-                        <p>Color Tattoo</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="color-realism">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08709.jpg" alt="Old Money Color Tattoo">
-                <div class="portfolio-overlay">
-                    <div class="portfolio-info">
-                        <h4>Old Money Design</h4>
-                        <p>Color Tattoo</p>
+                        <h4>Money in Fire</h4>
+                        <p>Color Close-Up</p>
                     </div>
                 </div>
             </div>
@@ -853,7 +833,7 @@
         <h2 class="section-title">Large-Scale Murals</h2>
         <div class="murals-grid">
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC07563.jpg" alt="Body Chief & Magda Gessler Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_0961.jpg" alt="Body Chief & Magda Gessler Mural">
                 <div class="mural-overlay">
                     <h4>Body Chief Collaboration</h4>
                     <p>Commercial mural project featuring Magda Gessler, showcasing photorealistic portraiture on architectural scale.</p>
@@ -861,7 +841,7 @@
             </div>
 
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08734.jpg" alt="Pokonaj Raka Foundation Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2884.jpg" alt="Pokonaj Raka Foundation Mural">
                 <div class="mural-overlay">
                     <h4>Pokonaj Raka Foundation</h4>
                     <p>Social impact mural for cancer awareness foundation, combining art with meaningful community message.</p>
@@ -869,10 +849,26 @@
             </div>
 
             <div class="mural-item">
-                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08717.jpg" alt="Deadpool Graffiti Mural">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_2903.jpg" alt="Szermierz Mural">
+                <div class="mural-overlay">
+                    <h4>Szermierz Mural</h4>
+                    <p>Dynamic fencer figure showcasing classical swordsmanship in large-scale street art format.</p>
+                </div>
+            </div>
+
+            <div class="mural-item">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/IMG_9542.jpg" alt="Deadpool Graffiti Mural">
                 <div class="mural-overlay">
                     <h4>Deadpool Graffiti</h4>
                     <p>Pop culture character rendered in street art style, showcasing comic book aesthetics in urban environment.</p>
+                </div>
+            </div>
+
+            <div class="mural-item">
+                <img src="https://github.com/michalskowron94/skowronart-website/raw/main/DSC08717.jpg" alt="Money in Fire Mural">
+                <div class="mural-overlay">
+                    <h4>Money in Fire Close-Up</h4>
+                    <p>Detailed close-up work showing intricate shading and color work on currency theme.</p>
                 </div>
             </div>
         </div>
